crates/glyph-cli/tests/corpus/valid/imports/kinded_alias_filesystem/lib.glyph
export type Mode = <"a mode value">

export block mode_name() -> Mode
    description: "Returns a mode."
    flow:
        return <"x">
